--- a/vim/rc/ddu.toml
+++ b/vim/rc/ddu.toml
@@ -96,7 +96,7 @@ lua_source = '''
         },
         sourceParams = {
             file_rec = {
-                ignoredDirectories = { '.git', 'node_modules', '.next', '.cache', 'target', '.idea' }
+                ignoredDirectories = { '.git', 'node_modules', '.next', '.cache', 'target', '.idea', '.venv', '__pycache__' }
             },
             rg = {
                 args = { '--json', '--ignore-case' },
