--- a/aqua/aqua.yaml
+++ b/aqua/aqua.yaml
@@ -6,12 +6,13 @@
 #   - all
 registries:
   - type: standard
-    ref: v4.163.0 # renovate: depName=aquaproj/aqua-registry
+    ref: v4.168.0 # renovate: depName=aquaproj/aqua-registry
 packages:
   - name: BurntSushi/ripgrep@14.1.0
   - name: aquaproj/registry-tool@v0.2.4
   - name: cli/cli@v2.48.0
   - name: denoland/deno@v1.42.4
+  - name: dylanaraps/neofetch@7.1.0
   - name: golang/go@go1.22.2
   - name: high-moctane/mocword@v0.2.0
   - name: jqlang/jq@jq-1.7.1
