--- a/vim/rc/dein-lazy.toml
+++ b/vim/rc/dein-lazy.toml
@@ -102,6 +102,10 @@ lua_source = '''
             { char = [=[<BS>]=], at = [=[\$\%#\$]=],        delete = 1 },
             { char = [=[<CR>]=], at = [=[^ *\\item.*\%#]=], input = [=[<CR>\item ]=], except = [=[\\\\\%#]=] },
         },
+        typst = {
+            { char = [=[$]=],    input_after = [=[$]=], except = [=[\\\%#]=] },
+            { char = [=[<BS>]=], at = [=[\$\%#\$]=],    delete = 1 },
+        },
         cs = {
             { char = [=[<CR>]=], at = [=[ {\%#}]=],    input = [=[<BS><BS><CR>{<CR>]=], input_after = [=[<CR>]=] },
             { char = [=[<CR>]=], at = [=[[^ ]{\%#}]=], input = [=[<BS><CR>{<CR>]=],     input_after = [=[<CR>]=] },
