--- a/vim/rc/lsp.toml
+++ b/vim/rc/lsp.toml
@@ -7,15 +7,18 @@ hook_add = '''
   command! Format lua vim.lsp.buf.format()
 '''
 lua_source = '''
-    for type, icon in pairs({ Error = "", Warn = "", Hint = "󰌶", Info = "" }) do
-        local hl = "DiagnosticSign" .. type
-        vim.fn.sign_define(hl, { text = icon, texthl = hl, numhl = hl })
-    end
-
     vim.diagnostic.config({
         update_in_insert = true,
         virtual_text = {
             prefix = "▰"
+        },
+        signs = {
+            text = {
+                [vim.diagnostic.severity.ERROR] = '',
+                [vim.diagnostic.severity.WARN] = '',
+                [vim.diagnostic.severity.HINT] = '󰌶',
+                [vim.diagnostic.severity.INFO] = '',
+            }
         }
     })
 
