--- a/aqua/aqua.yaml
+++ b/aqua/aqua.yaml
@@ -6,21 +6,22 @@
 #   - all
 registries:
   - type: standard
-    ref: v4.177.0 # renovate: depName=aquaproj/aqua-registry
+    ref: v4.181.0 # renovate: depName=aquaproj/aqua-registry
 packages:
   - name: BurntSushi/ripgrep@14.1.0
   - name: aquaproj/registry-tool@v0.2.5
-  - name: cli/cli@v2.49.1
-  - name: denoland/deno@v1.43.3
+  - name: cli/cli@v2.49.2
+  - name: denoland/deno@v1.43.5
   - name: golang/go@go1.22.3
   - name: high-moctane/mocword@v0.2.0
   - name: jqlang/jq@jq-1.7.1
-  - name: junegunn/fzf@0.52.0
+  - name: junegunn/fzf@0.52.1
   - name: nektos/act@v0.2.62
   - name: rhysd/vim-startuptime@v1.3.2
-  - name: rust-lang/mdBook@v0.4.37
+  - name: rust-lang/mdBook@v0.4.40
   - name: rustwasm/wasm-pack@v0.12.1
   - name: sharkdp/bat@v0.24.0
   - name: sharkdp/hyperfine@v1.18.0
   - name: tree-sitter/tree-sitter@v0.22.6
+  - name: typst/typst@v0.11.1
   - name: xxxserxxx/gotop@v4.2.0
