--- a/aqua/aqua.yaml
+++ b/aqua/aqua.yaml
@@ -6,12 +6,15 @@
 #   - all
 registries:
   - type: standard
-    ref: v4.181.0 # renovate: depName=aquaproj/aqua-registry
+    ref: v4.186.0 # renovate: depName=aquaproj/aqua-registry
+  # - name: local
+  #   type: local
+  #   path: ~/Go/aqua-registry/registry.yaml
 packages:
   - name: BurntSushi/ripgrep@14.1.0
   - name: aquaproj/registry-tool@v0.2.5
   - name: cli/cli@v2.49.2
-  - name: denoland/deno@v1.43.5
+  - name: denoland/deno@v1.43.6
   - name: golang/go@go1.22.3
   - name: high-moctane/mocword@v0.2.0
   - name: jqlang/jq@jq-1.7.1
@@ -25,3 +28,4 @@ packages:
   - name: tree-sitter/tree-sitter@v0.22.6
   - name: typst/typst@v0.11.1
   - name: xxxserxxx/gotop@v4.2.0
+  - name: jesseduffield/lazygit@v0.42.0
