--- a/vim/rc/dein-lazy.toml
+++ b/vim/rc/dein-lazy.toml
@@ -311,9 +311,9 @@ hook_add = '''
 [[plugins]]
 repo = 'prettier/vim-prettier'
 build = 'pnpm install --production'
-on_ft = ['astro', 'typescriptreact', 'markdown']
+on_ft = ['astro', 'typescriptreact']
 hook_source = '''
-  autocmd BufWritePre *.astro,*.tsx,*.md PrettierAsync
+  autocmd BufWritePre *.astro,*.tsx PrettierAsync
 '''
 [plugins.ftplugin]
 markdown = '''
@@ -356,7 +356,42 @@ on_ft = 'markdown'
 repo = 'MeanderingProgrammer/markdown.nvim'
 on_ft = 'markdown'
 lua_source = '''
-  require('render-markdown').setup({})
+  require('render-markdown').setup({
+    headings = { '# ', '## ', '### ', '#### ', '##### ', '###### ' },
+    markdown_query = [[
+        (atx_heading [
+            (atx_h1_marker)
+            (atx_h2_marker)
+            (atx_h3_marker)
+            (atx_h4_marker)
+            (atx_h5_marker)
+            (atx_h6_marker)
+        ] @heading)
+
+        (thematic_break) @dash
+
+        (fenced_code_block) @code
+
+        [
+            (list_marker_plus)
+            (list_marker_minus)
+            (list_marker_star)
+        ] @list_marker
+
+        (task_list_marker_unchecked) @checkbox_unchecked
+        (task_list_marker_checked) @checkbox_checked
+
+        (block_quote (block_quote_marker) @quote_marker)
+        (block_quote (paragraph (inline (block_continuation) @quote_marker)))
+        (block_quote (paragraph (block_continuation) @quote_marker))
+        (block_quote ((block_continuation) @quote_marker))
+
+        (pipe_table) @table
+        (pipe_table_header) @table_head
+        (pipe_table_delimiter_row) @table_delim
+        (pipe_table_row) @table_row
+    ]],
+  })
 '''
 
 [[plugins]]
