--- a/vim/rc/ddu.toml
+++ b/vim/rc/ddu.toml
@@ -404,3 +404,6 @@ on_source = 'ddu.vim'
 [[plugins]]
 repo = 'Shougo/ddu-kind-file'
 on_source = 'ddu.vim'
+
+[[plugins]]
+repo = 'Shougo/cmdline.vim'
