--- a/tmux/config/mapping.tmux.conf
+++ b/tmux/config/mapping.tmux.conf
@@ -5,21 +5,33 @@ unbind C-b
 # c: 新規ウィンドウ作成
 bind c new-window -c '#{pane_current_path}'
 
+# prefix と : の同時押しでも prefix + : と同じく command prompt を開く
+bind "'" command-prompt
+
 # v, s: ペインを分割
 bind v split-window -h -c '#{pane_current_path}'
 bind s split-window -v -c '#{pane_current_path}'
 
-# vimキーバインド: ペインを移動
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
+# `C-w` で WINDOW table に切り替え (https://qiita.com/izumin5210/items/d2e352de1e541ff97079)
+bind -n C-w switch-client -T WINDOW
 
-# shift + vimキーバインド: ペインをリサイズ
-bind -r H resize-pane -L 2
-bind -r J resize-pane -D 2
-bind -r K resize-pane -U 2
-bind -r L resize-pane -R 2
+# See: https://github.com/christoomey/vim-tmux-WINDOW
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|l?n?vim?x?|fzf)(diff)?$'"
+
+# `C-w` + h, j, k, l: ウィンドウ間を移動
+# `C-w` + <arrow>: ペインのリサイズ
+bind -T WINDOW h if-shell "$is_vim" "send-keys C-w h" "select-pane -L"
+bind -T WINDOW j if-shell "$is_vim" "send-keys C-w j" "select-pane -D"
+bind -T WINDOW k if-shell "$is_vim" "send-keys C-w k" "select-pane -U"
+bind -T WINDOW l if-shell "$is_vim" "send-keys C-w l" "select-pane -R"
+bind -T WINDOW -r Left  if-shell "$is_vim" "send-keys C-w Left"  "resize-pane -L 1"
+bind -T WINDOW -r Down  if-shell "$is_vim" "send-keys C-w Down"  "resize-pane -D 1"
+bind -T WINDOW -r Up    if-shell "$is_vim" "send-keys C-w Up  "  "resize-pane -U 1"
+bind -T WINDOW -r Right if-shell "$is_vim" "send-keys C-w Right" "resize-pane -R 1"
+
+# `C-w` が Tmux に喰われてしまうので，2回打つことで Vim に `C-w` を送れるようにして救う
+# 使用頻度の高い Window command がある場合は，明示的に `bind -T WINDOW <key> send-keys C-w <key>` すればいい
+bind -T WINDOW C-w send-keys C-w
 
 # q: ペインを閉じる
 bind q kill-pane
