--- a/tmux/config/option.tmux.conf
+++ b/tmux/config/option.tmux.conf
@@ -13,3 +13,6 @@ set -g escape-time 0
 
 # undercurl 対応 (できてないのだが。。。はて)
 set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'
+
+# :git で lazygit を popup window で実行
+set -g command-alias[1] 'git=popup -d "#{pane_current_path}" -w 95% -h 97% -y P -b rounded -E "lazygit"'
