--- a/aqua/aqua.yaml
+++ b/aqua/aqua.yaml
@@ -6,26 +6,27 @@
 #   - all
 registries:
   - type: standard
-    ref: v4.196.0 # renovate: depName=aquaproj/aqua-registry
+    ref: v4.201.0 # renovate: depName=aquaproj/aqua-registry
   # - name: local
   #   type: local
   #   path: ~/Go/aqua-registry/registry.yaml
 packages:
   - name: BurntSushi/ripgrep@14.1.0
+  - name: WebAssembly/wabt@1.0.35
   - name: aquaproj/registry-tool@v0.2.5
-  - name: cli/cli@v2.51.0
+  - name: cli/cli@v2.52.0
   - name: denoland/deno@v1.44.4
-  - name: golang/go@go1.22.4
+  - name: golang/go@go1.22.5
   - name: high-moctane/mocword@v0.2.0
+  - name: jesseduffield/lazygit@v0.42.0
   - name: jqlang/jq@jq-1.7.1
   - name: junegunn/fzf@0.53.0
-  - name: nektos/act@v0.2.63
+  - name: nektos/act@v0.2.64
   - name: rhysd/vim-startuptime@v1.3.2
   - name: rust-lang/mdBook@v0.4.40
-  - name: rustwasm/wasm-pack@v0.12.1
+  - name: rustwasm/wasm-pack@v0.13.0
   - name: sharkdp/bat@v0.24.0
   - name: sharkdp/hyperfine@v1.18.0
   - name: tree-sitter/tree-sitter@v0.22.6
   - name: typst/typst@v0.11.1
   - name: xxxserxxx/gotop@v4.2.0
-  - name: jesseduffield/lazygit@v0.42.0
