--- a/tmux/config/option.tmux.conf
+++ b/tmux/config/option.tmux.conf
@@ -8,6 +8,9 @@ set -g history-limit 100000
 set -g base-index 1
 set -g pane-base-index 1
 
+# ウィンドウの番号を詰める
+set-option -g renumber-windows on
+
 # ESC の遅延を 0 に
 set -g escape-time 0
 
