--- a/tmux/config/option.tmux.conf
+++ b/tmux/config/option.tmux.conf
@@ -18,4 +18,4 @@ set -g escape-time 0
 set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'
 
 # :git で lazygit を popup window で実行
-set -g command-alias[1] 'git=popup -d "#{pane_current_path}" -w 95% -h 97% -y P -b rounded -E "lazygit"'
+set -g command-alias[1] 'git=popup -d "#{pane_current_path}" -w 95% -h 97% -y P -b rounded -E "/bin/zsh -ic lazygit"'
