--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,23 +1,13 @@
 # tmuxの設定を反映させる方法
 # tmux source ~/.tmux.conf
 
-# tmux起動時のシェルをhomebrewのzshにする
-# brew の zsh 使うと _arguments:comparguments:409: not enough arguments
-# って出るからひとまず標準の zsh 使う
-# set-option -g default-shell "$HOMEBREW_PREFIX/bin/zsh"
-set-option -g default-shell "/bin/zsh"
+source-file ~/dotfiles/tmux/config/option.tmux
+source-file ~/dotfiles/tmux/config/status.tmux
+source-file ~/dotfiles/tmux/config/mapping.tmux
+source-file ~/dotfiles/tmux/config/plugin.tmux
 
-# 256色対応
-set-option -g default-terminal "tmux-256color"
-set-option -ga terminal-overrides ",$TERM:Tc"
-
-# ↓はよくわかってない。これがないとtmuxで下線に色がつかなくなる。
-set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'
-
-source ~/dotfiles/tmux/config/option.tmux.conf
-source ~/dotfiles/tmux/config/status.tmux.conf
-source ~/dotfiles/tmux/config/mapping.tmux.conf
-source ~/dotfiles/tmux/config/plugin.tmux.conf
+# Automatic tpm installation
+if "test ! -d ~/.tmux/plugins/tpm" "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm'"
 
 # Initialize TMUX plugin manager (これは最後に記述すること)
 run '~/.tmux/plugins/tpm/tpm'
